# StageMobile

./: .gitignore  README.md  build.sh  firestore.rules  gradle.properties  package-lock.json  settings.gradle.kts
.qmd_tools/: index.js
app/: build.gradle.kts  manage-soundfonts.js  package-lock.json  package.json
app/src/androidTest/java/com/example/stagemobile/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dsp_chain.h  fluidsynth_bridge.cpp  usb_audio_driver.cpp  usb_audio_driver.h
app/src/main/cpp/include/: fluidsynth.h
app/src/main/cpp/include/fluidsynth/: version.h
app/src/main/java/com/example/stagemobile/: MainActivity.kt  StageMobileApp.kt
app/src/main/java/com/example/stagemobile/audio/: DeviceAudioManager.kt
app/src/main/java/com/example/stagemobile/audio/engine/: AudioEngine.kt  DummyAudioEngine.kt  FluidSynthEngine.kt
app/src/main/java/com/example/stagemobile/data/: SetStageRepository.kt  SettingsRepository.kt
app/src/main/java/com/example/stagemobile/domain/model/: DSPEffectInstance.kt  InstrumentChannel.kt  SetStage.kt  Sf2Preset.kt
app/src/main/java/com/example/stagemobile/midi/: MidiConnectionManager.kt  MidiLearnMapping.kt
app/src/main/java/com/example/stagemobile/ui/components/: DSPCircularKnob.kt  DSPEffectsRackDialog.kt  DSPMeter.kt  DSPVerticalFader.kt  InfoPanel.kt  InstrumentChannelOptionsMenu.kt  MidiLearnModifiers.kt  MixerScreenInfoPanel.kt  SF2PresetSelectorDialog.kt  SetStageComponents.kt  SetStageQuickSelectorDialog.kt  SplashScreen.kt  StageToast.kt
app/src/main/java/com/example/stagemobile/ui/mixer/: AdvancedParamsDialog.kt  ChannelStrip.kt  InstrumentChannelSettingsPanel.kt  InstrumentChannelStrip.kt  MasterChannelStrip.kt  VerticalFader.kt  VirtualKeyboard.kt
app/src/main/java/com/example/stagemobile/ui/screens/: ContinuousPadsScreen.kt  DownloadsScreen.kt  DrumpadsScreen.kt  MixerScreen.kt  SetsScreen.kt  SettingsScreen.kt  SystemGlobalSettings.kt
app/src/main/java/com/example/stagemobile/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/stagemobile/utils/: MidiUtils.kt  SystemResourceMonitor.kt  UiUtils.kt
app/src/main/java/com/example/stagemobile/viewmodel/: MixerViewModel.kt
app/src/main/java/com/marceloferlan/stagemobile/: MainActivity.kt  StageMobileApp.kt
app/src/main/java/com/marceloferlan/stagemobile/audio/: DeviceAudioManager.kt
app/src/main/java/com/marceloferlan/stagemobile/audio/engine/: AudioEngine.kt  DummyAudioEngine.kt  FluidSynthEngine.kt
app/src/main/java/com/marceloferlan/stagemobile/audio/usb/: SuperpoweredUSBAudioHandler.kt
app/src/main/java/com/marceloferlan/stagemobile/data/: AuthRepository.kt  FeedbackRepository.kt  SetStageRepository.kt  SettingsRepository.kt  SoundFontRepository.kt
app/src/main/java/com/marceloferlan/stagemobile/data/backup/: BackupMetadata.kt  BackupRepository.kt  BackupStorageProvider.kt  CloudflareR2StorageProvider.kt  ConfigSnapshot.kt  FirebaseStorageProvider.kt
app/src/main/java/com/marceloferlan/stagemobile/domain/model/: AudioStats.kt  DSPEffectInstance.kt  FeedbackReport.kt  InstrumentChannel.kt  SetStage.kt  Sf2Preset.kt  SoundFontMetadata.kt
app/src/main/java/com/marceloferlan/stagemobile/midi/: MidiConnectionManager.kt  MidiLearnMapping.kt
app/src/main/java/com/marceloferlan/stagemobile/ui/components/: APMHudDialog.kt  DSPCircularKnob.kt  DSPCompressorMeter.kt  DSPEffectsRackDialog.kt  DSPMeter.kt  DSPVerticalFader.kt  InstrumentChannelOptionsMenu.kt  MidiLearnModifiers.kt  MixerScreenInfoPanel.kt  SF2PresetSelectorDialog.kt  SetStageComponents.kt  SetStageQuickSelectorDialog.kt  SoundFontSelectorDialog.kt  SplashScreen.kt  StageToast.kt
app/src/main/java/com/marceloferlan/stagemobile/ui/mixer/: InstrumentChannelSettingsPanel.kt  InstrumentChannelStrip.kt  MasterChannelStrip.kt  VerticalFader.kt  VirtualKeyboard.kt
app/src/main/java/com/marceloferlan/stagemobile/ui/screens/: BackupScreen.kt  ContinuousPadsScreen.kt  DownloadsScreen.kt  DrumpadsScreen.kt  FeedbackScreen.kt  LoginScreen.kt  MixerScreen.kt  (+3 more)
app/src/main/java/com/marceloferlan/stagemobile/usb/: UsbAudioManager.kt
app/src/main/java/com/marceloferlan/stagemobile/utils/: MidiUtils.kt  SystemResourceMonitor.kt  UiUtils.kt
app/src/main/java/com/marceloferlan/stagemobile/viewmodel/: FeedbackViewModel.kt  MixerViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground_scaled.xml  logo_stage_mobile.xml  logo_topbar.xml  meter_mask_channel.xml  meter_mask_channel_30.xml  meter_mask_channel_60.xml  meter_mask_master_30.xml  meter_mask_master_60.xml  splash_screen_native.xml  transparent_pixel.xml  vu_mask_channel_30.xml  vu_mask_channel_60.xml  vu_mask_master.xml  vu_mask_master_30.xml  vu_mask_master_60.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/example/stagemobile/: ExampleUnitTest.kt
cloudflare-worker/: package.json  wrangler.toml
cloudflare-worker/src/: index.js
docs/: INDEX.md  TODO.md  UsbDriver_implementation_plan_frente2.md  architecture.md  audio_performance_tuning.md  audio_routing_flow.md  component_map.md  developer_guide.md  diagnostico_cpu.md  diagnostico_memoria.md  features.md  plan_backup_feature.md  plan_dsp_benchmark_superpowered.md  plan_usb_driver_and_neon_dsp.md  superpowered_isolation.md  superpowered_licensing_briefing.html  superpowered_licensing_briefing.md  ui_ux_standards.md
docs/.agent-memory/: MEMORY.md  feedback_consult_docs_first.md  feedback_workflow.md  project_audio_tuning_state.md  project_stagemobile.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
logs/: Xiaomi-M2012K11AG-Android-16_2026-03-04_205736.logcat.txt  logcat.txt
superpowered-usb/: build.gradle.kts
superpowered-usb/src/main/cpp/: CMakeLists.txt  sp_bridge.cpp  sp_bridge.h
superpowered-usb/src/main/java/com/marceloferlan/stagemobile/superpowered/: SuperpoweredUSBAudioHandler.kt  SuperpoweredUSBAudioManager.kt
(+3 files in other folders)
